--- a/scss/components/_contact-form.scss
+++ b/scss/components/_contact-form.scss
@@ -12,9 +12,10 @@
     font-family: $logo-font;
     letter-spacing: 1rem;
     font-size: 2rem;
-    color: $of-pink;
+    color: $primary-color;
     position: relative;
     margin-bottom: 0.4rem;
+    opacity: .4;
     &::after {
       content: '';
       position: absolute;
@@ -22,7 +23,8 @@
       bottom: 8px;
       height: 2px;
       width: 120%;
-      background-color: $of-grey;
+      background-color: $primary-color;
+      z-index: -1;
     }
   }
 }
