--- a/scss/components/_terms-condition.scss
+++ b/scss/components/_terms-condition.scss
@@ -96,7 +96,7 @@
 }
 
 .pinky {
-  color: $primary-color;
+  color: $dark-pink;
 }
 
 .bold {
